# intedex

./: .gitignore  CMakeLists.txt  README.md
include/: algorithms.hpp  app.hpp  arithmetics.hpp  frame.hpp  primes.hpp
src/: CMakeLists.txt  algorithms.cpp  app.cpp  arithmetics.cpp  frame.cpp  primes.cpp
